# databricks-neo4j-lab

./: .gitignore  .mcp.json  AWS_CLEANUP.md  CLAUDE.md  CONTENT.md  CONTENT_PLAN.md  README.md  SYNC_LABS.md  TALK.md  TEMPLATE.md  micro_site.md
Lab_0_Sign_In/: README.md
Lab_10_Aura_Agents_API/: README.md  aura_agent_client.ipynb
Lab_1_Aura_Setup/: Aura_Free_Trial.md  CONTENT.md  README.md  SAMPLE_QUERIES.md
Lab_2_Aura_Agents/: README.md  mcp_setup.md
Lab_2_Databricks_ETL_Neo4j/: 02_load_neo4j_full.ipynb  03_gds_louvain_maintenance.ipynb  04_gds_knn_aircraft.ipynb  05_gds_pagerank_airports.ipynb  06_gds_node_similarity_aircraft.ipynb  CONTENT.md  README.md  SAMPLE_QUERIES.md  aura-explore.md  data-exploring.md  gds-exploring.md  gds-v2.md
Lab_3_Semantic_Search/: 03_data_and_embeddings.ipynb  04_graphrag_retrievers.ipynb  05_mcp_graph_queries.ipynb  CONTENT.md  README.md  SAMPLE_QUERIES.md  data_utils.py
Lab_4_Compound_AI_Agents/: CONTENT.md  PART_A.md  PART_B.md  README.md
Lab_4_GraphRAG/: 01_data_and_embeddings.ipynb  README.md  data_utils.py
Lab_5_AgentBricks/: PART_A.md  PART_B.md  README.md
Lab_5_Aura_Agents/: CONTENT.md  README.md  mcp_setup.md
Lab_5_Databricks_ETL_Neo4j/: 01_aircraft_etl_to_neo4j.ipynb  02_load_neo4j_full.ipynb  README.md  SAMPLE_QUERIES.md
lab_setup/generator/: pyproject.toml
lab_setup/generator/src/generator/: config.py  fleet.py  main.py  sensors.py  specs.py
lab_setup/verify_labs/: pyproject.toml
lab_setup/verify_labs/src/verify_labs/: config.py  connection.py  lab5_queries.py  main.py  query_runner.py
(+200 files in other folders)
