[project]
name = "aircraft-data-generator"
version = "0.1.0"
description = "Synthetic aircraft digital twin dataset generator with correlated sensor degradation"
requires-python = ">=3.11"
dependencies = [
    "faker>=24.0.0",
    "numpy>=1.26.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
generate-data = "generator.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generator"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
