[project]
name = "verify-labs"
version = "0.1.0"
description = "CLI tool to verify Neo4j data loaded by workshop lab notebooks"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
verify-labs = "verify_labs.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verify_labs"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
